# weather

./: Cargo.toml
src/: accu_weather.rs  contracts.rs  http_client.rs  location_manager.rs  main.rs  open_weather.rs
src/accu_weather/: configuration.rs  contracts.rs  current_weather.rs  future_weather.rs  location.rs
src/open_weather/: configuration.rs  contracts.rs  current_weather.rs  future_weather.rs  location.rs
