[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
join = "0.3.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"]}
